# employee_comment_analyzer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEPLOYMENT_GUIDE.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES.txt  config.yaml  launcher.py  pyproject.toml  train_launcher.py
.github/workflows/: ci.yml
docs/: MIGRATION_GUIDE_v2.3.md  SKIP_REASON_GUIDE.md
scripts/: build_complete.bat  build_exe.bat  package_distribution.bat
src/: __init__.py
src/core/: batch_processor.py  classifier.py  errors.py  model_utils.py  pipeline.py  skip_reasons.py  train.py  train_interface.py
src/io/: excel_io.py
src/ui/: app_ui.py
src/utils/: config.py  logger.py  memory.py  training_validation.py
tests/: conftest.py  test_batch_processor.py  test_batch_processor_integration.py  test_batch_ui.py  test_end_to_end.py  test_io.py  test_model.py  test_performance.py  test_pipeline.py  test_training_ui.py
tests/fixtures/: __init__.py  mock_model.py
